#263 - update vm args in jpackage/launch4j