@@ -37,7 +37,7 @@ cp -f $binaries/libtreescan64.so $bundleinputdir
 $javajdk/bin/jpackage --verbose --type app-image --input $bundleinputdir \
             --main-jar TreeScan.jar --icon $srcdir/installers/resources/TreeScanStatistic.png \
             --app-version $version --name TreeScanStatistic --dest $bundledir \
-            --java-options "-Djava.library.path=\$APPDIR"
+            --java-options "-Djava.library.path=\$APPDIR --enable-native-access=ALL-UNNAMED"
 
 #  Create application rpm
 $javajdk/bin/jpackage --verbose --type rpm --app-image $bundledir/TreeScanStatistic --app-version $version \
